--- a/projeto.html
+++ b/projeto.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8"/>
 	<header>
 		<title> PetShopao </title>
-		
+		<link rel="stylesheet" type="text/css" href="estilo.css"/>
 		<img id="logo" align="left" float="left" width="200"  src ="https://uploaddeimagens.com.br/images/002/553/053/full/logo.jpg?1585264016" id="imagem"/> 
 		<div   id="cabeçalho"><h1> PETSHOP  </h1> 
 		
@@ -32,12 +32,12 @@
 	
 			<img height="290" width="300" src="https://www.petlove.com.br/images/products/210674/product/Ra%C3%A7%C3%A3o_Golden_Formula_Carne_e_Arroz_para_C%C3%A3es_Adultos_de_Ra%C3%A7as_Pequenas_-_15_Kg_1210471.jpg?1562146313"/>
 		</p>
-			<>
+			<script>
 				function preco(){
 					alert("Pedigree R$:100,00   Golden   R$:120,00");
 					
 		}
-				</>
+				</script>
 		
 		
 						
